--- a/main.css
+++ b/main.css
@@ -1,1 +1,13 @@
+h1 {
+  font-size: 3em;
+  color: red;
+}
 
+li {
+ font-family: verdana;
+}
+
+p {
+  font-family: courier;
+  font-size: 160%;
+}
